--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -7,7 +7,7 @@ project(noapp LANGUAGES CXX)
 set(BINARY_NAME "noapp")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
-# versions of CMake.
+# versions of CMake
 cmake_policy(VERSION 3.14...3.25)
 
 # Define build configuration option.
